--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 # ?? ?? ??
 server:
-  port: 8085
+  port: 8080
 
 # database ?? ??
 spring:
@@ -23,7 +23,7 @@ spring:
     open-in-view: false
     show-sql: true # SQL ?? ??
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
       show_sql: true # SQL pretty print
