--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     suffix: .html
     enabled: true
   profiles:
-    include: TodoApp
+    include: ignore
 
   # spring data jpa ??
   jpa:
