--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db_todoapp?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: "0000"
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
